--- a/asset/sass/main.scss
+++ b/asset/sass/main.scss
@@ -29,4 +29,5 @@ h1{
 @import "./Pages/product";
 @import "./Pages/detail";
 @import "./Pages/contact";
-@import "./Pages/sign"
+@import "./Pages/sign";
+@import "./Pages/profile"
